--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.8.2",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@workspace/ui": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
