feat(auth): implement Google OAuth authentication and user management
- Added Google OAuth integration using the arctic library.
- Created authentication guards for user authentication and authorization.
- Developed user registration, login, and social authentication functionalities.
- Implemented password management features including reset and update.
- Established user role management for admin functionalities.
- Added validation schemas for user input using zod.
- Created utility functions for JWT token generation and cookie management.
- Integrated email activation and password reset functionalities.
- Developed user model with password hashing and token generation methods.
- Set up routes for user and authentication management.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -41,6 +41,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "arctic": "3.7.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
