--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -40,7 +40,9 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.8.2",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@workspace/ui": "workspace:*",
+    "async-mutex": "^0.5.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -53,7 +55,9 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-lite-youtube-embed": "^2.5.6",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.5",
     "react-spinners": "^0.17.0",
     "react-youtube": "^10.1.0",
