--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,7 +12,7 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
     "build": "npx tsc",
-    "start": "node -r tsconfig-paths/register dist/server.js",
+    "start": "node dist/server.js",
     "commit": "cz",
     "prepare": "husky",
     "update": "pnpm update",
@@ -69,6 +69,7 @@
     "redis": "^5.8.2",
     "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.1",
+    "tslib": "^2.8.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.5"
